button spacing mobile fix

--- a/src/app/travel-info/travel-info.component.css
+++ b/src/app/travel-info/travel-info.component.css
@@ -1,3 +1,7 @@
 .hotel-names {
     font-size: 1.2em;
 }
+
+.hotel-contact {
+    margin-bottom: 0.5em;
+}
